Dark mode: Fix top gap not being removed

--- a/css/new-design/dark-mode.css
+++ b/css/new-design/dark-mode.css
@@ -42,7 +42,7 @@
 /* Removing top gap */
 /* TODO: Remove when fixed by fb */
 .__fb-dark-mode {
-	--header-height: 0 !important;
+	--header-height: 0px !important;
 }
 
 /* Message list: fix for received messages text color in dark mode */
